Fix icon and text overlap on smaller screens

--- a/assets/css/sections/_blog.scss
+++ b/assets/css/sections/_blog.scss
@@ -1,14 +1,12 @@
 .post-icon{
 	width: 75px;
 	height: 75px;
-	display: inline-block;
 	border: 2px solid black;
 	border-radius: 30%;
-	margin-bottom: 125px;
+	margin-bottom: 30%
 }
 .post-information{
 	margin-left: 10px;
-	display: inline-block;
 }
 
 .post-container{
